[package]
name = "r-description-scalerail"
description = "Parsing and editor for R DESCRIPTION files"
edition = "2021"
version = "0.5.0"
repository = "https://github.com/scalerail-solutions/r-description-rs"
homepage = "https://github.com/scalerail-solutions/r-description-rs"
license = "Apache-2.0"
keywords = ["r-description", "rfc822", "lossless", "edit", "r"]
categories = ["parser-implementations"]

[lib]
# Keep the upstream crate path so switching packages does not require code changes.
name = "r_description"

[dependencies]
deb822-lossless = { version = ">=0.3.1, <0.6" }
deb822-fast = { version = "0.2.3", features = ["derive"] }
deb822-derive = "0.3.1"

rowan = "0.16"
url = "2"
serde = { version = "1", optional = true }

[features]
serde = ["dep:serde"]

[dev-dependencies]
serde_json = "1"
